welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: illegal start of simple pattern
		case if (cigars>=40 && cigars<=60 && isWeekend==false) => return true
                     ^cigarParty:4: error: '=>' expected but ';' found.
		case if (cigars>=40 && isWeekend==true) => return true
^cigarParty:4: error: illegal start of simple pattern
		case if (cigars>=40 && isWeekend==true) => return true
                     ^cigarParty:5: error: '=>' expected but ';' found.
		case if (cigars<40 && isWeekend==false) => return false
^cigarParty:5: error: illegal start of simple pattern
		case if (cigars<40 && isWeekend==false) => return false
                     ^cigarParty:6: error: '=>' expected but ';' found.
		case if (cigars>60 && isWeekend==false) => return false
^cigarParty:6: error: illegal start of simple pattern
		case if (cigars>60 && isWeekend==false) => return false
                     ^cigarParty:7: error: '=>' expected but '}' found.
	}
        ^