welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	(cigars, isWeekend) match {
		case if (cigars>=40 && cigars<=60 && isWeekend==false) => return true
		case if (cigars>=40 && isWeekend==true) => return true
		case if (cigars<40 && isWeekend==false) => return false
		case if (cigars>60 && isWeekend==false) => return false
	}
	
}
